# RxGuard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
Exps/: Context_Extraction.ipynb  Contextual_Risk_Reasoning.ipynb  Guideline_Retrieval.ipynb
config/: settings.py
data/vectorstore/: index.faiss  index.pkl
data/vectorstore/guidelines_v1/: index.faiss  index.pkl
src/: app.py
src/agentic/agents/: base.py
src/agentic/graph/: builder.py
src/agentic/graph/edges/: conditionals.py
src/agentic/graph/nodes/: extract_profile.py  final_report.py  guideline_retrieval.py  risk_reasoning.py  safety_critic.py
src/agentic/state/: __init__.py  schemas.py
src/agentic/utils/: __init__.py  logging_config.py
src/api/: main.py
src/ui/: app.py
