[project]
name = "medgemma-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-huggingface",
    "dotenv>=0.9.9",
    "langchain-community",
    "langchain-groq",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
